# Graphix

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.cmake
.github/workflows/: Build.yml  CppCheck.yml
